versioned_docs/version-23.1/reference/rpk/rpk-cloud/rpk-cloud-login.mdx
---
title: rpk cloud login
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk cloud login| Redpanda Docs" />
  <meta name="description" content="rpk cloud login" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-cloud/rpk-cloud-login/" />
</head>

Log in to the Redpanda cloud.

This command checks for an existing token and, if present, ensures it is still
valid. If no token is found or the token is no longer valid, this command will
login and save your token.

You may use any of the following methods to pass the cloud credentials to rpk:

Logging in requires cloud credentials, which can be created in the Clients
tab of the Users section in the Redpanda Cloud online interface. Client
credentials can be provided in three ways, in order of preference:

- In `$HOME/.config/rpk/__cloud.yaml`, in `client_id` and `client_secret` fields
- Through `RPK_CLOUD_CLIENT_ID` and `RPK_CLOUD_CLIENT_SECRET` environment variables
- Through the `--client-id` and `--client-secret` flags

If none of these are provided, login will prompt you for the client ID and
client secret and will save them to the `__cloud.yaml` file. If you specify
environment variables or flags, they will not be synced to the `__cloud.yaml`
file unless the --save flag is passed. The cloud authorization token is always synced.

## Usage

```bash
rpk cloud login [flags]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>--client-id</td>
      <td>string</td>
      <td>The client ID of the organization in Redpanda Cloud.</td>
    </tr>
    <tr>
      <td>--client-secret</td>
      <td>string</td>
      <td>The client secret of the organization in Redpanda Cloud.</td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for login.</td>
    </tr>
    <tr>
      <td>--save</td>
      <td>-</td>
      <td>
        Save environment or flag specified client ID and client secret to the
        configuration file.
      </td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging (default: false).</td>
    </tr>
  </tbody>
</table>
