versioned_docs/version-23.2/reference/rpk/rpk-cloud/rpk-cloud-login.mdx
---
title: rpk cloud login
rpk_version: (rev )
---

<head>
  <meta name="title" content="rpk cloud login| Redpanda Docs" />
  <meta name="description" content="rpk cloud login" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-cloud/rpk-cloud-login/" />
</head>

Log in to Redpanda Cloud.

This command checks for an existing Redpanda Cloud API token and, if present,
ensures it is still valid. If no token is found or the token is no longer valid,
this command will login and save your token along with the client ID used to
request the token.

## Login credentials

You may use either SSO or client credentials to log in.

### SSO

This will automatically launch your default web browser and prompt you to
authenticate via our Redpanda Cloud page. Once you have successfully
authenticated, you will be ready to use rpk cloud commands.

### Client credentials

Cloud client credentials can be used to login to Redpanda, they can be created
in the Clients tab of the Users section in the Redpanda Cloud online interface.
client credentials can be provided in three ways, in order of preference:

- In your rpk cloud auth, `client_id` and `client_secret` fields
- Through `RPK_CLOUD_CLIENT_ID` and `RPK_CLOUD_CLIENT_SECRET` environment variables
- Through the `--client-id` and `--client-secret` flags

If none of these are provided, rpk will use the SSO method to login.
If you specify environment variables or flags, they will not be synced to the
`rpk.yaml` file unless the `--save` flag is passed. The cloud authorization
token and client ID is always synced.

## Profile selection

This command by default attempts to populate a new profile that talks to a
cloud cluster for you. If you have an existing cloud profile, this will select
it, prompting which to use if you have many. If you have no cloud profile, this
command will prompt you to select one that exists in your organization. If you
want to disable automatic profile creation and selection, use `--no-profile`.

## Usage

```bash
rpk cloud login [flags]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>--client-id</td>
      <td>string</td>
      <td>The client ID of the organization in Redpanda Cloud.</td>
    </tr>
    <tr>
      <td>--client-secret</td>
      <td>string</td>
      <td>The client secret of the organization in Redpanda Cloud.</td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for login.</td>
    </tr>
    <tr>
      <td>--no-profile</td>
      <td>-</td>
      <td>Skip automatic profile creation and any associated prompts.</td>
    </tr>
    <tr>
      <td>--save</td>
      <td>-</td>
      <td>
        Save environment or flag specified client ID and client secret to the
        configuration file.
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda or rpk config file; default search paths are
        ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.
      </td>
    </tr>
    <tr>
      <td>-X, --config-opt</td>
      <td>stringArray</td>
      <td>
        Override rpk configuration settings; '-X help' for detail or '-X list'
        for terser detail.
      </td>
    </tr>
    <tr>
      <td>--profile</td>
      <td>string</td>
      <td>rpk profile to use.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging.</td>
    </tr>
  </tbody>
</table>
